# Pumpkin

./: .gitignore
minizinc/: Sudoku.mzn  orangesProblem.mzn  test_gcc.mzn
minizinc/lib/: pumpkin_gcc.mzn
pumpkin-solver/: Cargo.toml
pumpkin-solver/examples/: playground.rs
pumpkin-solver/src/constraints/: global_cardinality_lower_upper.rs  mod.rs
pumpkin-solver/src/engine/variables/: affine_view.rs  domain_id.rs  integer_variable.rs  literal.rs
pumpkin-solver/src/propagators/: mod.rs
pumpkin-solver/src/propagators/global_cardinality/: ford_fulkerson_lower_bounds.rs  gcc_lower_upper.rs  gcc_lower_upper_2.rs  mod.rs  simple_gcc_lower_upper.rs
test_bench/: inputs_all.txt  inputs_community_detection.txt  inputs_community_detection_rnd.txt  inputs_evm_super_compilation.txt  inputs_flamegraph.txt  inputs_physician_scheduling.txt  inputs_rotating-workforce-scheduling.txt  inputs_sudoku.txt  inputs_vaccine.txt  plots.py  pyproject.toml  test_bench.py
test_bench/output_community_detection_rnd/: community-detection_basic_filter.mzn-rnd_n100_e5000_s500_d300_c4_p50.json-0.txt  community-detection_decomp.mzn-rnd_n100_e5000_s500_d300_c4_p50.json-0.txt  community-detection_regin.mzn-rnd_n100_e5000_s500_d300_c4_p50.json-0.txt
