[tool.poetry]
name = "test-bench"
version = "0.1.0"
description = ""
authors = ["David Rockenzahn Gallegos <d.t.rockenzahngallegos@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
