[tool.poetry]
name = "test-bench"
version = "0.1.0"
description = ""
authors = ["David Rockenzahn Gallegos <d.t.rockenzahngallegos@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
python-lsp-server = {version = "^1.12.0", extras = ["all"]}
jupyterlab-lsp = "^5.1.0"
jupytext = "^1.16.4"
#sagemath = "^1.3.0"
matplotlib = "^3.9.2"
#numba = "^0.60.0"
ipympl = "^0.9.4"
ipywidgets = "^8.1.5"
#array-to-latex = "^0.92"
ipython = "^8.28.0"
tk = "^0.1.0"
ipykernel = "^6.29.5"
scipy = "^1.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
